Branch with convertor for Codelists